<?xml version="1.0"?>
<package format="2">
  <name>warmup_project</name>
  <version>0.0.0</version>
  <description>Warmup project for Comprobo20</description>
  <maintainer email="aphung@olin.edu">Amy Phung</maintainer>
  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>laser_line_extraction</depend>
  <depend>nav_msgs</depend>
  <depend>ros_numpy</depend>
  <depend>rospy</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
